fix word wrap issue in pre/code block

--- a/src/main/resources/base.css
+++ b/src/main/resources/base.css
@@ -255,7 +255,3 @@ li em, p em {
 code em, tt em {
   text-decoration: none;
 }
-
-code {
-  white-space: nowrap;
-}
